# pose_msgs

./: CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
.svn/: all-wcprops  entries
data/: pose_camera.yml
data/.svn/: all-wcprops  entries
data/.svn/text-base/: demo.vcg.svn-base
include/: static_pose_node.h
include/.svn/: all-wcprops  entries
include/pose_msgs/: pose_msgs_defaults.h
include/pose_msgs/.svn/: all-wcprops  entries
launch/: demo_sync.launch
launch/.svn/: all-wcprops  entries
launch/.svn/text-base/: demo.launch.svn-base
msg/: Transform.msg
msg/.svn/: all-wcprops  entries
msg/.svn/text-base/: Transforms.msg.svn-base
msg/lisp/pose_msgs/: pose_msgs-msg.asd
msg_gen/cpp/include/pose_msgs/: Transform.h  Transforms.h
msg_gen/lisp/: Transform.lisp  Transforms.lisp  _package.lisp  _package_Transform.lisp  _package_Transforms.lisp  pose_msgs-msg.asd
src/.svn/: all-wcprops  entries
src/.svn/text-base/: static_pose_node.cpp.svn-base
src/pose_msgs/.svn/: all-wcprops  entries
src/pose_msgs/msg/: _Transform.py  _Transforms.py  __init__.py
src/pose_msgs/srv/: _GetPose.py  _GetPoses.py  __init__.py
srv/: GetPoses.srv
srv/.svn/: all-wcprops  entries
srv/lisp/pose_msgs/: .GetPoses.asd-dep  pose_msgs-srv.asd
srv_gen/cpp/include/pose_msgs/: GetPose.h  GetPoses.h
srv_gen/lisp/: GetPose.lisp  GetPoses.lisp  _package.lisp  _package_GetPose.lisp  _package_GetPoses.lisp  pose_msgs-srv.asd
