<package>
<name>pose_msgs</name>
<version>1.0.0</version>
  <maintainer email="jvarley@cs.columbia.edu">Jake Varley</maintainer>
  <description>pose_msgs</description>
  <author>Markus Bader</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/static_pose</url>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>v4r_libraries</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>
</package>


